Fixed some content being hidden by swiping buttons

--- a/public/css/swiping.css
+++ b/public/css/swiping.css
@@ -11,6 +11,7 @@
     font-family: 'Geologica', sans-serif;
     color: black;
     position: relative;
+    padding-bottom: 50px;
 }
 
 .dark-mode .swiping-ctn {
